# 42_turtlebot

./: .gitignore  readme.md  ros_run.sh  rosbag2_2026_05_13-16_44_44.tgz
rosbag2_2026_05_13-16_44_44/: metadata.yaml  rosbag2_2026_05_13-16_44_44_0.db3
src/camera_pkg/: package.xml  setup.py
src/camera_pkg/camera_pkg/: image_canny.py  image_publisher.py  image_yolo.py  pose_yolo.py  yolo_publisher.py
src/camera_pkg/config/: camera_params.yaml
src/my_robot_bringup/: package.xml  setup.py
src/my_robot_bringup/config/: nav2_params.yaml  slam_toolbox.yaml  twist_mux.yaml
src/my_robot_bringup/launch/: all.launch.py  camera_robot.launch.py  joy.launch.py  ladar.launch.py  motor.py  nav.launch.py  robot.launch.py  rviz_slam.launch.py  slam.launch.py  twist_mux.launch.py
src/my_robot_bringup/maps/: README.md
src/my_robot_bringup/my_robot_bringup/: image_publisher.py  joy_nav_controller.py  scan_normalizer.py
src/my_robot_bringup/rviz/: slam.rviz
src/py_launch_example/: package.xml  setup.py
src/py_launch_example/launch/: example_bringup_launch.py  example_param_launch.py
